GGB-2030 make sure first tool is not hidden behind the back button
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56104 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/headerbar.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/headerbar.less
@@ -221,9 +221,8 @@
 			height: 46px;
 		}
 		.submenuItems {
-			margin-left: -40px;
-			margin-bottom: 0px;
-			margin-top: 0px;
+
+			margin: 0;
 		
 			.submenu_button {
 					.border-radius(5px);
